...
       
        let label = UILabel()
        label.font = UIFont.systemFont(ofSize: 28, weight: .bold)
        label.textColor = .white
        label.translatesAutoresizingMaskIntoConstraints = false
        label.numberOfLines = 0
        label.text = "The Key To Success In iPhone Photography"
        return label
    }()
    
    private let descriptionLabel: UILabel = {
       
        let label = UILabel()
...
